--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap": "~3.3.1",
     "angular-bootstrap": "0.12.x",
     "angular": "~1.3.4",
-    "angularfire": "~0.9.2"
+    "angularfire": "~0.9.2",
+    "lodash": "~3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
