--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-bootstrap": "0.12.x",
     "angular": "~1.3.4",
     "angularfire": "~0.9.2",
-    "lodash": "~3.2.0"
+    "lodash": "~3.2.0",
+    "angular-md5": "~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
